create header in flask app

--- a/flask_app/Templates/login.html
+++ b/flask_app/Templates/login.html
@@ -2,8 +2,7 @@
 {% block content %}
 
 <div class="container">
-  <h1>OCI Migration App</h1>
-  <p></p>
+  <h1 class="page-header">OCI Migration App</h1>
 
 <form>
   <div class="form-row">
