--- a/flask_app/Templates/main.html
+++ b/flask_app/Templates/main.html
@@ -7,13 +7,27 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/static/css/main.css">
 </head>
-  
 <body>
-  <!-- Main Content -->
   <div class="container">
+    <!-- Main Header -->
+    <header>
+      <div class="row">
+        <div class="col-md-6">
+          <img class="header-logo" src="/static/img/logo/logo.png" alt="Oracle Cloud Infrastructure Migration Tool Logo">
+        </div>
+        <div class="col-md-6 header-btn-col">
+          <button class="btn btn-primary header-btn pull-right">Help</button>
+          <button class="btn btn-primary header-btn pull-right">Jobs</button>
+          <button class="btn btn-primary header-btn pull-right">New Job</button>
+        </div>
+      </div>
+    </header>
+    <!-- Main Content -->
     {% block content %}
     {% endblock %}
+
   </div>
 
 </body>
