--- a/flask_app/Templates/main.html
+++ b/flask_app/Templates/main.html
@@ -4,6 +4,7 @@
   <title>Dragonfly</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Need to include frameworks locally in case of no internet access -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,9 +15,11 @@
     <!-- Main Header -->
     <header>
       <div class="row">
+        <!-- Header Logo -->
         <div class="col-md-6">
           <img class="header-logo" src="/static/img/logo/logo.png" alt="Oracle Cloud Infrastructure Migration Tool Logo">
         </div>
+        <!-- Header Buttons -->
         <div class="col-md-6 header-btn-col">
           <button class="btn btn-primary header-btn pull-right">Help</button>
           <button class="btn btn-primary header-btn pull-right">Jobs</button>
