--- a/flask_app/static/css/main.css
+++ b/flask_app/static/css/main.css
@@ -10,6 +10,10 @@ body {
   background: #f2f4f5;
 }
 
+.btn-primary {
+  background-color: #027bc7;
+  border-color: #027bc7;
+}
 
 /* Main Header */
 .header-btn-col {
@@ -32,4 +36,19 @@ body {
 /* Main Content */
 .page-header {
   color: #027bc7;
+  border-style: none;
+  font-size: 28px;
+  margin: 20px 0 10px;
+  font-weight: bold;
+}
+
+.content-container {
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: 6px 6px 8px 2px rgba(0,0,0,.2);
+}
+
+.submit-btn {
+  width: 100%;
+  font-weight: bold;
 }
