--- a/flask_app/static/css/main.css
+++ b/flask_app/static/css/main.css
@@ -63,7 +63,7 @@ body {
   width: 100%;
   font-weight: bold;
   background-color: #707070;
-  border-color: #707070;  
+  border-color: #707070;
 }
 
 
@@ -79,4 +79,14 @@ body {
   background-color: #707070;
   border-color: #707070;
   margin: 6px 0;
+}
+
+
+/* Image Selection */
+.image-check {
+
+}
+
+.image-label {
+
 }
