update ocic plugin to return status codes

--- a/templates/main.html
+++ b/templates/main.html
@@ -21,9 +21,9 @@
         </div>
         <!-- Header Buttons -->
         <div class="col-md-6 header-btn-col">
-          <button class="btn btn-primary header-btn pull-right">Help</button>
-          <button class="btn btn-primary header-btn pull-right">Jobs</button>
-          <button class="btn btn-primary header-btn pull-right">New Job</button>
+          <a class="btn btn-primary header-btn pull-right" href="">Help</a>
+          <a class="btn btn-primary header-btn pull-right" href="">Jobs</a>
+          <a class="btn btn-primary header-btn pull-right" href="{{url_for('login')}}">New Job</a>
         </div>
       </div>
     </header>
